# 42-Heilbronn

core/A-Maze-ing/: Makefile  README.md  a_maze_ing.py  config.py  config.txt  display.py  maze.txt  mazegen_sabo_gla_bgebreeg-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  writer.py
core/A-Maze-ing/mazegen/: README.md  __init__.py  generator.py
core/Libft/: Makefile  ft_isalnum.c  ft_isdigit.c  ft_memchr.c  ft_memcpy.c  ft_strdup.c  ft_strmapi.c  ft_strtrim.c
core/Python00/ex1/: ft_plot_area.py
core/Python00/ex6/: ft_garden_summary.py
core/Python01/ex3/: ft_plant_factory.py
core/Python01/ex4/: ft_garden_security.py
core/Python01/ex5/: ft_plant_types.py
core/Python01/ex6/: ft_garden_analytics.py
core/born2beRoot/: signature.txt
core/ft_printf/: Makefile  README.md  decimal.c  ft_printf.c  ft_printf.h  helper_functions.c  hex_low.c  hex_up.c  integer.c  pointer.c
core/libft/: ft_calloc.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
core/push_swap/: Makefile  README.md  checkers.c  free.c  index_utils.c  initialize_stack.c  instructions_a.c  instructions_b.c  instructions_both.c  main.c  parsing.c  push_swap.h  radix_sort.c  stack_operations.c
core/push_swap/libft/: ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_putchar_fd.c  (+4 more)
core/python06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
(+80 files in other folders)
